--- a/games/A Dark Room/index.html
+++ b/games/A Dark Room/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html itemscope itemtype="https://schema.org/CreativeWork">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
 
-    <title>A Dark Room</title>
+    <title>A Dark Room — Improved</title>
+    <meta name="description" content="A minimalist text adventure">
+    <meta property="og:image" content="img/adr.png" />
+    <meta property="og:title" content="A Dark Room" />
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/main.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/room.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/outside.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/path.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/world.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/ship.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/space.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/fabricator.css" />
+    <!-- Scaling / Mobile Fix -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script>
+        if(!window.jQuery){
+            document.write('<script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lib/jquery.min.js"><\/script>');
+        }
+    </script>
 
-    <!-- ADR Libraries -->
+    <!-- ADR Dependencies -->
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lib/jquery.color-2.1.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lib/jquery.event.move.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lib/jquery.event.swipe.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lib/base64.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lib/translate.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lang/langs.js"></script>
 
-    <!-- ADR Game Engine -->
+    <!-- Language Loader -->
+    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lang/langs.js"></script>
+    <script>
+        var lang = (new URL(location.href)).searchParams.get("lang") || localStorage.lang || "en";
+        if(lang !== "en"){
+            document.write('<script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lang/' + lang + '/strings.js"><\/script>');
+            document.write('<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/lang/' + lang + '/main.css" />');
+        }
+    </script>
+
+    <!-- ADR Game Scripts -->
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/Button.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/audioLibrary.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/audio.js"></script>
@@ -46,22 +54,81 @@
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/prestige.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/scoring.js"></script>
 
-    <!-- ADR Events -->
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/events/global.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/events/room.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/events/outside.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/events/encounters.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/events/setpieces.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/events/marketing.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/events/executioner.js"></script>
+    <!-- CSS Base Game Styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/main.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/room.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/outside.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/path.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/world.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/ship.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/space.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/css/fabricator.css" />
 
-    <script src="https://cdn.jsdelivr.net/gh/doublespeakgames/adarkroom/script/localization.js"></script>
+    <!-- ====================================================================== -->
+    <!-- ✅ FIXED THEME + SCALING OVERRIDES -->
+    <!-- ====================================================================== -->
+    <style>
+        /* Global light theme */
+        body {
+            background: #f4f4f4 !important;
+            color: #111 !important;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+
+        /* Center game on large screens */
+        #wrapper {
+            max-width: 900px;
+            margin: auto;
+            padding: 10px;
+        }
+
+        /* Visible buttons */
+        button, .button, input[type=button] {
+            background: #fff !important;
+            color: #000 !important;
+            border: 1px solid #333 !important;
+            padding: 8px 14px !important;
+            border-radius: 4px !important;
+            font-size: 1rem;
+        }
+
+        button:hover, .button:hover {
+            background: #e2e2e2 !important;
+        }
+
+        /* Make ADR UI panels readable */
+        #outerSlider, #main, #content, #header {
+            background: #ffffff !important;
+            color: #111 !important;
+        }
+
+        /* Text elements fix */
+        .row, .eventText, .inventory {
+            color: #000 !important;
+        }
+
+        /* Better scaling on small screens */
+        @media (max-width: 600px) {
+            body {
+                font-size: 18px;
+            }
+            button, .button {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+            #wrapper {
+                padding: 5px;
+            }
+        }
+    </style>
+
 </head>
-
 <body>
     <div id="wrapper">
-        <div id="saveNotify">saved.</div>
-
+        <div id="saveNotify"></div>
         <div id="content">
             <div id="outerSlider">
                 <div id="main">
@@ -70,12 +137,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        // Initialize the game
-        $(function () {
-            engine.init();
-        });
-    </script>
 </body>
 </html>
